# mpsplines

./: .gitignore  LICENSE  README.md  figure01.py  figure02.py  figure03.py  figure04.py  figure05.py  gen_data_for_figure03.py  mpsplines.py  requirements.txt  setup.cfg  setup.py
data/: aod550_hourly_merra2_2014.csv  ghics_profile.csv  ground_albedo_lta_merra2.csv  pwater_hourly_merra2_2014.csv
mpsplines/: __init__.py  core.py
mpsplines/tests/: __init__.py  readme.py
tests/: benchmark.ipynb  carpentras_daily_total_Whm-2.csv  intro_example.py  temp_anomaly.py
