[metadata]
name = mpsplines
version = 0.1.1
description = Mean-preserving interpolation of time series with splines
author = Jose A Ruiz-Arias
author_email = jararias@uma.es
long_description = file: README.md
long_description_content_type = text/x-markdown
license = GPL v3.0
url = https://github.com/jararias/mpsplines
classifiers =
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6

[options.extras_require]
doctest = matplotlib
